@@ -121,7 +121,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Remove useless whitespace from Special:Brokenredirects header
 * Treat "allmessagesnotsupporteddb" as wikitext when echoing; change default
   text
-* (bug 5497) regeression in HTML normalization in 1.6 (unclosed <li>,<dd>,<dt>)
+* (bug 5497) Regression in HTML normalization in 1.6 (unclosed <li>,<dd>,<dt>)
 * (bug 5709) Allow customisation of separator for categories
 * (bug 5684) Introduce Special:Randomredirect
 * (bug 5611) Add a name attribute to the text box containing source text in
@@ -192,6 +192,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Silently ignore errors on profiling table update.
 * (bug 5801) Correct handling of underscores in Special:Listusers
 * Clean up Special:Listusers; add an "(all)" label to the group selection box
+* (bug 5812) Use appropriate link colour in Special:Mostlinked
 
 == Compatibility ==
 
